# fin-project

./: README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/fin-project/: .gitignore  Dockerfile  manage.py  requirements.txt  used_nicknames.json
backend/fin-project/accounts/: models.py  serializers.py  urls.py  utils.py  views.py
backend/fin-project/accounts/migrations/: 0001_initial.py  0002_user_name_user_nickname_user_useremail.py  0003_alter_user_useremail.py  0004_customuser_delete_user.py
backend/fin-project/articles/: models.py  serializers.py  urls.py  views.py
backend/fin-project/articles/migrations/: 0001_initial.py  0002_article_like_users.py
backend/fin-project/fin_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/fin-project/finance_recommend/: apps.py  models.py  serializers.py  urls.py  views.py
backend/fin-project/finance_recommend/migrations/: 0001_initial.py  0002_rename_prd_name_product_fin_prdt_cd_and_more.py  0003_alter_option_prd_alter_product_dcls_end_dat_and_more.py  0004_alter_product_fin_co_subm_day.py  0005_alter_product_unique_together_alter_option_table.py  0006_alter_product_unique_together_and_more.py  0007_alter_product_unique_together.py  0008_alter_product_unique_together_and_more.py  0009_alter_product_fin_prdt_nm.py  0010_alter_option_intr_rate_alter_option_intr_rate2_and_more.py  0011_option_save_trm_product_etc_note_product_join_member_and_more.py  0012_alter_product_join_deny_spot.py  (+12 more)
backend/fin-project/mydata/: apps.py  models.py  serializers.py  urls.py  views.py
(+187 files in other folders)
