[project]
name = "fin-pjt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=5.2.1",
    "django-allauth>=65.8.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "oauthlib>=3.2.2",
    "openai>=1.79.0",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]
